# wedeo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFORMANCE_STATE.md  CONTRIBUTING.md  Cargo.toml  DEBUG_NOTES.md  DIVERGENCES.md  H264.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md  TODO.md  deny.toml  llms.txt  memory-setup.md  rust-toolchain.toml  rustfmt.toml  typos.toml
.claude/projects/-Users-sharif-Code-wedeo/memory/: learning_backup_mb_border.md  learning_mbaff_deblock_iteration.md
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  codec.yml
.github/workflows/: ci.yml
adapters/wedeo-rav1d/: Cargo.toml
adapters/wedeo-rav1d/src/: lib.rs
adapters/wedeo-rav1e/: Cargo.toml
adapters/wedeo-rav1e/src/: lib.rs
adapters/wedeo-symphonia/: Cargo.toml
adapters/wedeo-symphonia/src/: channel_layout.rs  codec_map.rs  decoder.rs  demuxer.rs  error.rs  io_bridge.rs  lib.rs  metadata.rs  opus.rs  sample_format.rs
bins/wedeo-cli/: Cargo.toml
bins/wedeo-cli/src/: main.rs
bins/wedeo-play/: Cargo.toml
bins/wedeo-play/src/: main.rs
codecs/wedeo-codec-h264/: Cargo.toml  build.rs
codecs/wedeo-codec-h264/asm/aarch64/: h264cmc_neon.S  h264dsp_neon.S  h264idct_neon.S  h264pred_neon.S  h264qpel_neon.S
codecs/wedeo-codec-h264/benches/: h264_bench.rs
codecs/wedeo-codec-h264/src/: asm_dispatch.rs  asm_ffi.rs  cabac.rs  cabac_tables.rs  cavlc.rs  cavlc_tables.rs  deblock.rs  decoder.rs  dequant.rs  dpb.rs  idct.rs  intra_pred.rs  lib.rs  mb.rs  mc.rs  mvpred.rs  nal.rs  pps.rs  refs.rs  sei.rs  shared_picture.rs  slice.rs  sps.rs  tables.rs  thread_pool.rs
codecs/wedeo-codec-pcm/: Cargo.toml
codecs/wedeo-codec-pcm/src/: lib.rs
codecs/wedeo-codec-vp9/: Cargo.toml
codecs/wedeo-codec-vp9/src/: block.rs  bool_decoder.rs  context.rs  data.rs  decoder.rs  dsp.rs  header.rs  idct.rs  intra_pred.rs  lib.rs  loopfilter.rs  mc.rs  mvs.rs  prob.rs  quant.rs  recon.rs  refs.rs  types.rs
crates/wedeo/: Cargo.toml  README.md
crates/wedeo-codec/: Cargo.toml
crates/wedeo-codec/src/: bitstream.rs  decoder.rs  descriptor.rs  encoder.rs  lib.rs  options.rs  registry.rs  subtitle.rs
crates/wedeo-core/: Cargo.toml
crates/wedeo-core/src/: buffer.rs  channel_layout.rs  chroma_location.rs  codec_id.rs  color_primaries.rs  color_trc.rs  error.rs  frame.rs  frame_side_data.rs  lib.rs  log.rs  media_type.rs  metadata.rs  packet.rs  pixel_format.rs  rational.rs  sample_format.rs  timestamp.rs
crates/wedeo-filter/: Cargo.toml
crates/wedeo-filter/src/: graph.rs  lib.rs  registry.rs
crates/wedeo-format/: Cargo.toml
crates/wedeo-format/src/: context.rs  demuxer.rs  io.rs  lib.rs  muxer.rs  protocol.rs  registry.rs
crates/wedeo-resample/: Cargo.toml
crates/wedeo-resample/src/: lib.rs
crates/wedeo-scale/: Cargo.toml
crates/wedeo-scale/src/: lib.rs
crates/wedeo/src/: lib.rs
docs/rust-atomics-and-locks/: 00-foreword.md  01-preface.md  02-basics.md  03-atomics.md  04-memory-ordering.md  05-building-spinlock.md  06-building-channels.md  07-building-arc.md  08-hardware.md  09-os-primitives.md  10-building-locks.md  11-inspiration.md  README.md  WEDEO_SYNTHESIS.md
formats/wedeo-format-h264/: Cargo.toml
formats/wedeo-format-h264/src/: lib.rs
formats/wedeo-format-ivf/: Cargo.toml
formats/wedeo-format-ivf/src/: lib.rs
formats/wedeo-format-mp4/: Cargo.toml
formats/wedeo-format-mp4/src/: atoms.rs  boxes.rs  demuxer.rs  lib.rs  muxer.rs
formats/wedeo-format-wav/: Cargo.toml
formats/wedeo-format-wav/src/: lib.rs
formats/wedeo-format-webm/: Cargo.toml
formats/wedeo-format-webm/src/: lib.rs
plans/: PARALLEL-WORKFLOW.md  cabac-assessment.md  h264-remaining.md  mp4-muxer-roadmap.md  mp4-muxer.md  rav1d-av1-adapter.md  video-player-audio.md
scripts/: .conformance_baseline.json  .conformance_cabac_snapshot.json  .conformance_frext_snapshot.json  audit_conformance_snapshots.py  audit_dequant_cqm.py  bench_ab.py  bench_baseline.py  bitpos_compare.py  bs_compare.py  bskip_mv_compare.py  build_cabac_trace.sh  cabac_aslr_check.py  cabac_bin_compare.py  cabac_pair_compare.py  cabac_state_at_mb.py  cabac_state_compare.py  cabac_trace_interleave.py  categorize_diffs.py  check_direct_mode.py  check_dirty_tree.sh  classify_diff_files.py  classify_diffs.py  classify_errors.py  classify_frame_types.py  classify_stream_features.py  coeff_compare_8x8.py  compare_mvs.py  conformance_delta.py  conformance_diff.py  conformance_frext.py  conformance_full.py  conformance_parse.py  conformance_report.py  conformance_snapshot.py  deblock_ab_compare.py  deblock_diff.py  deblock_edge_trace.py  deblock_mb_dump.py  deblock_pixel_watch.py  dpb_compare.py  (+62 more)
tasks/: lessons.md
test_suites/baselines/: .suite_fate-cabac_snapshot.json  .suite_fate-cavlc_snapshot.json  .suite_jvt-avc_v1_snapshot.json  .suite_jvt-fr-ext_snapshot.json
tests/fate/: Cargo.toml
tests/fate/data/: vp9_blue_100x75.ivf  vp9_keyframe_64x64.ivf  vp9_red_64x64.ivf  vp9_testsrc_128x128.ivf  vp9_testsrc_320x240.ivf
tests/fate/src/: audiogen.rs  framecrc.rs  lib.rs
tests/fate/tests/: fate_av1.rs  fate_av1_encode.rs  fate_h264.rs  fate_pcm_wav.rs  fate_symphonia.rs  fate_vp9.rs
