[package]
name = "wedeo-rav1d"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rav1d AV1 decoder adapter for wedeo"


[dependencies]
wedeo-core = { workspace = true }
wedeo-codec = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
rav1d = { git = "https://github.com/memorysafety/rav1d", default-features = true }
libc = "0.2"
