[package]
name = "wedeo-play"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Simple video player for wedeo (decode + display)"
publish = false

[[bin]]
name = "wedeo-play"
path = "src/main.rs"

[dependencies]
wedeo-core = { workspace = true }
wedeo-codec = { workspace = true }
wedeo-format = { workspace = true }
wedeo-scale = { workspace = true }
wedeo-resample = { workspace = true }
wedeo-codec-pcm = { workspace = true }
wedeo-codec-h264 = { workspace = true }
wedeo-format-wav = { workspace = true }
wedeo-format-h264 = { workspace = true }
wedeo-format-mp4 = { workspace = true }
wedeo-rav1d = { workspace = true }
wedeo-symphonia = { workspace = true }
cpal = { workspace = true }
minifb = { workspace = true }
ringbuf = { workspace = true }

[lints]
workspace = true
