[package]
name = "wedeo-codec-h264"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "H.264/AVC video codec for wedeo"

[features]
default = ["asm"]
asm = []

[dependencies]
wedeo-core = { workspace = true }
wedeo-codec = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "h264_bench"
harness = false
