[package]
name = "wedeo-codec-vp9"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "VP9 video codec for wedeo"

[dependencies]
wedeo-core = { workspace = true }
wedeo-codec = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
