[package]
name = "wedeo-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Codec framework for wedeo (libavcodec equivalent)"


[dependencies]
wedeo-core = { workspace = true }
bitflags = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
av-bitstream = "0.2.1"
