[package]
name = "wedeo-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Filter framework for wedeo (libavfilter equivalent)"


[dependencies]
wedeo-core = { workspace = true }
bitflags = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
