[package]
name = "wedeo-format"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Format framework for wedeo (libavformat equivalent)"

[features]
tracing-detail = ["tracing/attributes"]

[dependencies]
wedeo-core = { workspace = true }
wedeo-codec = { workspace = true }
bitflags = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
