[package]
name = "wedeo-format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Format framework for wedeo (libavformat equivalent)"


[dependencies]
wedeo-core = { workspace = true }
wedeo-codec = { workspace = true }
bitflags = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
