[package]
name = "wedeo-resample"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Audio resampling for wedeo (libswresample equivalent)"


[dependencies]
wedeo-core = { workspace = true }
rubato = "1"
audioadapter-buffers = "3"

[lints]
workspace = true
