[package]
name = "wedeo-scale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Video scaling for wedeo (libswscale equivalent)"


[dependencies]
dcv-color-primitives = "1.0.0"
wedeo-core = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
