[package]
name = "wedeo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "AI-generated Rust rewrite of FFmpeg — pure-Rust multimedia framework"
readme = "README.md"

[features]
default = ["h264", "pcm", "wav", "h264-format", "mp4", "symphonia"]
h264 = ["dep:wedeo-codec-h264"]
pcm = ["dep:wedeo-codec-pcm"]
wav = ["dep:wedeo-format-wav"]
h264-format = ["dep:wedeo-format-h264"]
mp4 = ["dep:wedeo-format-mp4"]
symphonia = ["dep:wedeo-symphonia"]

[dependencies]
# Framework crates (always present)
wedeo-core = { workspace = true }
wedeo-codec = { workspace = true }
wedeo-format = { workspace = true }
wedeo-filter = { workspace = true }
wedeo-resample = { workspace = true }
wedeo-scale = { workspace = true }

# Implementation crates — linked for inventory registration at link time.
# Each is optional so users can slim the binary by disabling unused formats.
wedeo-codec-h264 = { workspace = true, optional = true }
wedeo-codec-pcm = { workspace = true, optional = true }
wedeo-format-wav = { workspace = true, optional = true }
wedeo-format-h264 = { workspace = true, optional = true }
wedeo-format-mp4 = { workspace = true, optional = true }
wedeo-symphonia = { workspace = true, optional = true }
# Note: wedeo-rav1d (AV1 via rav1d) is not included here because it depends
# on a git-only crate and cannot be published to crates.io. To use AV1
# decoding, depend on wedeo-rav1d directly from the git repository.

[lints]
workspace = true
