[package]
name = "wedeo-format-h264"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "H.264 Annex B raw bitstream demuxer for wedeo"


[dependencies]
wedeo-core = { workspace = true }
wedeo-format = { workspace = true }
wedeo-codec = { workspace = true }
wedeo-codec-h264 = { workspace = true }
inventory = { workspace = true }

[lints]
workspace = true
