[package]
name = "wedeo-format-mp4"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MP4/MOV format demuxer and muxer for wedeo"


[dependencies]
wedeo-core = { workspace = true }
wedeo-codec = { workspace = true }
wedeo-format = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
