[package]
name = "wedeo-format-wav"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAV format muxer for wedeo"


[dependencies]
wedeo-core = { workspace = true }
wedeo-format = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
