[package]
name = "wedeo-format-webm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "WebM/Matroska container demuxer for wedeo"

[dependencies]
wedeo-core = { workspace = true }
wedeo-format = { workspace = true }
wedeo-codec = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
